# LibOrbit

./: .classpath  .gitignore  .gitmodules  .project  README.md
lib/liborbit-native/: Makefile  README.md
lib/liborbit-native/src/jni/: ca__1360_liborbit_util_jni_OrbitInputEventsReader.cpp  ca__1360_liborbit_util_jni_OrbitInputEventsReader.h
lib/liborbit-native/src/main/: container.cpp  container.h  input_reader.cpp  input_reader.h  process.cpp  process.h  pseudo_sudo.cpp  pseudo_sudo.h
lib/local-joystick/: liborbit-local-joystick-uwp.sln
lib/local-joystick/liborbit-local-joystick-uwp/: ReadMe.txt  ca__1360_liborbit_io_OrbitLocalJoystickProvider.cpp  ca__1360_liborbit_io_OrbitLocalJoystickProvider.h  joystick.cpp  joystick.h  liborbit-local-joystick-uwp.vcxproj  liborbit-local-joystick-uwp.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
lib/local-joystick/liborbit-local-joystick-windows/: ca__1360_liborbit_io_OrbitLocalJoystickProvider.cpp  ca__1360_liborbit_io_OrbitLocalJoystickProvider.h  joystick.cpp  joystick.h  liborbit-local-joystick-uwp.vcxproj  liborbit-local-joystick-uwp.vcxproj.filters  liborbit-local-joystick-windows.sln  stdafx.cpp  stdafx.h  targetver.h
lib/neural-network/: CMakeLists.txt
lib/neural-network/common/: model.cpp  model.h  serialization.cpp  serialization.h  utilities.cpp  utilities.h
lib/neural-network/evaluation/: evaluation.cpp  evaluation.h
lib/neural-network/evolution/neat/: environment.cpp  environment.h  gene.cpp  gene.h  generation.cpp  generation.h  genome.cpp  genome.h  organism.cpp  organism.h  species.cpp  species.h
(+121 files in other folders)
